# cmake_self_practice

./: .gitignore  CMakeLists.txt  build.sh
include/: api.h
src/: hello.c  hello.h
utils/: CMakeLists.txt  test.c
